@@ -40,6 +40,7 @@ v15.0.00
 		Finance: set name of outgoing email to school name, not user's name
 		Library: added Optical Media as item type
 		Students: fixed School History section in Student Profile to exclude upcoming years
+		Students: fixed Application Form for logged in users not selecting a family by default (if one exists)
 		Timetable: added ability to set and display text and background colour for timetable day headers
 		Timetable: adjusted font size for shorter lessons to allow display or facility name
 		Timetable Admin: added link from course view in Manage Courses & Classes to edit class enrolment
